[project]
name = "rex"
version = "0.1.0"
description = ""
authors = [
    {name = "brhenri-mr",email = "superbr55@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ezdxf (>=1.3.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
